# styledlog

./: Cargo.toml  README.md
.github/: ci.yml
examples/: usage.rs
src/: lib.rs  main.rs
src/colorful/: mod.rs
src/formatter/: mod.rs
src/level/: mod.rs
tests/: mod.rs
tests/colorful/: hex_to_rgba.rs  mod.rs
