[package]
name = "styledlog"
version = "0.0.0"
authors = ["Montasir Mirghani <contact@montasir.me>"]
edition = "2021"
description = "Styledlog: A Rust crate combining versatile logging features with styled output."
license = "MIT OR Apache-2.0"
homepage = "https://github.com/dr-montasir/styledlog"
repository = "https://github.com/dr-montasir/styledlog"
readme = "README.md"
keywords = ["log", "style", "logging", "colors"]
categories = ["development-tools::debugging"]

[dependencies]
